updated mobile text clipping issues for index

--- a/assets-css/styleSection.css
+++ b/assets-css/styleSection.css
@@ -182,6 +182,25 @@ button.buttonIndex {
     background-color: #090B3C;
 }
 
+.button_link {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    float: right;
+    text-decoration: none;
+    background-color: #e0f8fe;
+    border-radius: 5px;
+    padding: 2px 2px;
+    border: 1px solid rgba(0, 0, 0, 0.151);
+}
+
+.button_link:hover {
+    color: #f3f3f3;
+    background-color: #090B3C;
+    border-style: solid;
+    border-color: #f3f3f3;
+    border-width: 1px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+
 /* active main news flash design */
 div.mainNewsFlash.active:before {
     content: "";
@@ -305,7 +324,7 @@ div.newsFlash.active div.newsFlashContainer:hover {
     div.buttonContainerIndex {
         margin: 4% 10% 1% auto;
     }
-    
+
     article.indexGrid {
         grid-template-columns: 48% 48%;
         grid-template-rows: 6vw 1fr 1fr 1fr;
@@ -435,7 +454,7 @@ div.newsFlash.active div.newsFlashContainer:hover {
         opacity: .9;
         background-color: #000;
     }
-    
+
     div.newsFlash.active div.newsFlashContainer {
         position: fixed;
         width: auto;
@@ -447,7 +466,7 @@ div.newsFlash.active div.newsFlashContainer:hover {
         margin-top: 0;
         margin-left: 0;
     }
-    
+
     div.newsFlash.active div.newsFlashContainer {
         display: flex;
         flex-direction: column;
@@ -477,7 +496,7 @@ div.newsFlash.active div.newsFlashContainer:hover {
         -webkit-line-clamp: 8;
     }
 }
-    
+
 
 /* media break point under 350px */
 
@@ -486,12 +505,12 @@ div.newsFlash.active div.newsFlashContainer:hover {
         font-family: 'Iceland';
         font-size: 1.1em;
     }
-    
+
     h3.flashTitle {
         font-family: 'Iceland';
         font-size: 1.1em;
     }
-    
+
     article.indexGrid {
         grid-template-columns: 48% 48%;
         grid-template-rows: 8vw 35vw 28vw 28vw;
@@ -615,7 +634,7 @@ div.newsFlash.active div.newsFlashContainer:hover {
         opacity: .9;
         background-color: #000;
     }
-    
+
     div.newsFlash.active div.newsFlashContainer {
         position: fixed;
         width: auto;
@@ -627,7 +646,7 @@ div.newsFlash.active div.newsFlashContainer:hover {
         margin-top: 0;
         margin-left: 0;
     }
-    
+
     div.newsFlash.active div.newsFlashContainer {
         display: flex;
         flex-direction: column;
@@ -684,12 +703,40 @@ div.newsFlash.active div.newsFlashContainer:hover {
         display: block;
     }
 
+    /* button disablers */
+
+    div.newsFlash .button_link, div.mainNewsFlash .button_link {
+        display: none;
+    }
+
+    div.newsFlash .button_link:hover, div.mainNewsFlash .button_link:hover {
+        display: none;
+    }
+
+    div.newsFlash.active .button_link, div.mainNewsFlash.active .button_link {
+        display: block;
+    }
+
+    div.newsFlash.active .button_link:hover, div.mainNewsFlash.active .button_link:hover {
+        display: block;
+    }
+
+    /* hide text on long titles */
+   
+    h3.flashTitle {
+        display: -webkit-box !important;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        white-space: normal;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
     /* more button */
 
     div.buttonContainerIndex {
         margin: 17% auto 1em;
     }
-    
+
     button.buttonIndex {
         padding: 1em 2em;
         border-radius: 20px;
@@ -703,12 +750,12 @@ div.newsFlash.active div.newsFlashContainer:hover {
         font-family: 'Iceland';
         font-size: 1.1em;
     }
-    
+
     h3.flashTitle {
         font-family: 'Iceland';
         font-size: 1.1em;
     }
-    
+
     article.indexGrid {
         grid-template-columns: 48% 48%;
         grid-template-rows: 8vw 35vw 28vw 28vw;
@@ -832,7 +879,7 @@ div.newsFlash.active div.newsFlashContainer:hover {
         opacity: .9;
         background-color: #000;
     }
-    
+
     div.newsFlash.active div.newsFlashContainer {
         position: fixed;
         width: auto;
@@ -844,7 +891,7 @@ div.newsFlash.active div.newsFlashContainer:hover {
         margin-top: 0;
         margin-left: 0;
     }
-    
+
     div.newsFlash.active div.newsFlashContainer {
         display: flex;
         flex-direction: column;
@@ -906,30 +953,11 @@ div.newsFlash.active div.newsFlashContainer:hover {
     div.buttonContainerIndex {
         margin: 3em auto 1em;
     }
-    
+
     button.buttonIndex {
         padding: 1em 2em;
         border-radius: 20px;
         color: #f3f3f3;
         background-color: #090B3C;
     }
-}
-
-.button_link {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    float: right;
-    text-decoration: none;
-    background-color:#e0f8fe ;
-    border-radius: 5px;
-    padding: 2px 2px;
-    border: 1px solid rgba(0, 0, 0, 0.151);
-}
-
-.button_link:hover {
-    color:#f3f3f3;
-    background-color: #090B3C;
-    border-style: solid;
-    border-color: #f3f3f3;
-    border-width: 1px;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
